manifests/networking/gateway-api/canary/apps-routing-virtualservice.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: ecom-apps-routes-domain
  namespace: ecom
spec:
  hosts:
  - "shop.local"
  gateways:
  - istio-system/ecom-gateway
  http:
  - match:
    - uri:
        prefix: /api/products
    route:
    - destination:
        host: product-service.ecom.svc.cluster.local
        port:
          number: 8083
  - match:
    - uri:
        prefix: /api/auth
    route:
    - destination:
        host: auth-service.ecom.svc.cluster.local
        port:
          number: 8081

---

apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: ecom-apps-routes-fallback
  namespace: ecom
spec:
  hosts:
  - "*"
  gateways:
  - istio-system/ecom-gateway
  http:
  - match:
    - uri:
        prefix: /api/products
    route:
    - destination:
        host: product-service.ecom.svc.cluster.local
        port:
          number: 8083
  - match:
    - uri:
        prefix: /api/auth
    route:
    - destination:
        host: auth-service.ecom.svc.cluster.local
        port:
          number: 8081
