manifests/networking/gateway-api/canary/user-service-destinationrule.yml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule

metadata:
  name: user-service
  namespace: ecom

spec:
  host: user-service

  subsets:
  - name: v1
    labels:
      version: v1

  - name: v2
    labels:
      version: v2
