manifests/networking/gateway-api/canary/user-service-virtualservice.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService

metadata:
  name: user-service
  namespace: ecom

spec:
  hosts:
  - user-service

  http:
  - route:

    - destination:
        host: user-service
        subset: v1
      weight: 90

    - destination:
        host: user-service
        subset: v2
      weight: 10
